--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   bloc: ^9.0.0
   flutter_bloc: ^9.1.1
   fl_chart:
+  firebase_messaging: 
   google_fonts: 
   equatable: 
   intl: 
