Add navigation and notification features; implement CurrentPageCubit and integrate local notifications

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   flutter_bloc: ^9.1.1
   fl_chart:
   firebase_messaging: 
+  flutter_local_notifications: 
   google_fonts: 
   equatable: 
   intl: 
