Update Firebase configuration and web app settings; add new keys to env.json, modify index.html for Firebase initialization, and update manifest.json for app name.

--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "waterapp",
-    "short_name": "waterapp",
+    "name": "Aquaview",
+    "short_name": "Aquaview",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
