--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   firebase_core: ^3.13.0
   bloc: ^9.0.0
   flutter_bloc: ^9.1.1
+  device_preview: 
   fl_chart:
   firebase_messaging: 
   flutter_local_notifications: 
